Revert "fixed fa icon and text alignment in address area"
This reverts commit 3ecf276ceabd290f0459d19ce7abb29eb4423738.

--- a/style.css
+++ b/style.css
@@ -2646,7 +2646,6 @@ input[type="radio"], input[type="checkbox"] {
 	display: block;
 	padding-left: 45px;
 	font-style: italic;
-	line-height: 2;
 }
 
 .section-contact .address-contact .fa-inverse {
